@@ -1,5 +1,6 @@
 1.3: Sat May 31 18:43:46 EDT 2008
-    - Doc bugs in the Bollinger Bands
+    - doc bugs in the Bollinger Bands
+    - added $class->recommended instantiaters.
 
 1.2: Wed May 28 16:13:43 EDT 2008
     - version hell still
